feat : Trip CRUD API 구현
- TripController 구현 및 테스트
- Trip Entity 수정